[package]
name = "web-app-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"actix-web" = "4.3.1"
"itertools" = "0.10.5"
"log" = "0.4"
"env_logger" = "0.10"
"r2d2_sqlite" = "0.20"
"r2d2" = "0.8"
"rusqlite" = "0.27"
"serde_json" = "1.0"
"serde" = { version = "1.0", features = ["derive"] }
"reqwest" = { version = "0.11", features = ["json"] }


